tests/baselines/reference/genericContextualTypingSpecialization.errors.txt
genericContextualTypingSpecialization.ts(2,1): error TS2454: Variable 'b' is used before being assigned.


==== genericContextualTypingSpecialization.ts (1 errors) ====
    var b: number[];
    b.reduce<number>((c, d) => c + d, 0); // should not error on '+'
    ~
!!! error TS2454: Variable 'b' is used before being assigned.